Thu Jan 29 09:09:16 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c: use the right index in the new analyse rollout move
	function

Thu Jan 29 09:07:26 CET 2009 Christian Anthon <anthon@kiku.dk>

	* bearoff.c: avoid assert_false when hypergammon db present

Tue Jan 27 14:40:32 CET 2009 Christian Anthon <anthon@kiku.dk>

	* doc/allabout.xml, doc/gnubgdb.xml, doc/gnubg/allabout.html,
	doc/gnubg/allabout.pdf, doc/gnubg/gnubg.6, doc/gnubg/gnubg.html,
	doc/gnubg/gnubg.info, doc/gnubg/gnubg.pdf, doc/gnubg/gnubg.texi:
	Update document license to GFDL 1.3.

Mon Jan 26 12:09:19 CET 2009 Christian Anthon <anthon@kiku.dk>

	* progress.c: jSD not printed in text interface for fCubeRollout.

Mon Jan 26 10:49:56 CET 2009 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix stop on stds in the MT code. May well be broken in
	the non-MT code as well.

Sun Jan 25 16:21:08 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, play.c: Clicking anywhere on the board before first
	match is started starts a new match. Clicking in the dice area
	either starts a new game or roll the dice as appropriate.

Sat Jan 24 21:31:10 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, backgammon.h, commands.inc: Add a command to rollout the
	current analysed move. "analyse rollout move 1 2 3" will rollout the
	first three candidates in the movelist.

Fri Jan 23 09:34:07 CET 2009 Christian Anthon <anthon@kiku.dk>

	* board3d/drawboard3d.c: Protect some function calls if shadows not
	initialised.

Thu Jan 22 23:33:24 CET 2009 Christian Anthon <anthon@kiku.dk>

	* eval.c, rollout.c: Stop adding noise to EvalOver and to the variance
	reduction. 

Thu Jan 22 12:42:57 CET 2009 Christian Anthon <anthon@kiku.dk>

	* relational.c: Asume that sql always uses . for decimal separator in
	input/output.

Sat Jan 17 21:57:31 CET 2009 Christian Anthon <anthon@kiku.dk>

	* rollout.c: Fix a small bug in BasicRollout. The first move (0-ply)